--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-scroll": "^1.8.9",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3"
   }
 }
